--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FriendFinder : Home</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
+    <header class="jumbotron">
         <h1>FriendFinder</h1>
     </header>
 
-    <section>
-        <p>There is only one</p>
+    <section class="container">
+        <h2>Take a survey and view your compatibility with other users.</h2>
+        <p>Click the button below to get started.</p>
+        <br>
+        <a class="btn btn-primary" href="/survey">Take Survey</a>
     </section>
 </body>
 
