corrected listening port issue, added some survey content

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,8 +9,80 @@
 </head>
 
 <body>
+    <div class="container">
+    <h1 class="jumbotron">Survey</h1>
+    <br>
+    <br>
 
-    
+    <h2><strong>About You</strong></h2>
+    <h4>Name (Required)</h4>
+    <input type="text" id="name" class="form-control" required>
+
+    <h2>Link to Photo Image (Required)</h2>
+    <input type="text" id="photo" class="form-control" required>
+    <br>
+    <br>
+
+    <!-- Survey provided by the sample -->
+    <h2><strong>Question 1</strong></h2>
+    <h4>You prefer spending free time at home or a familiar place.</h4>
+    <select class="chosen-select" id="q1">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <br>
+    <br>
+    <h2><strong>Question 2</strong></h2>
+    <h4>You prefer watching a movie when you want to be entertained.</h4>
+    <select class="chosen-select" id="q2">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <br>
+    <br>
+    <h2><strong>Question 3</strong></h2>
+    <h4>You enjoy traveling to new places.</h4>
+    <select class="chosen-select" id="q3">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <br>
+    <br>
+    <h2><strong>Question 4</strong></h2>
+    <h4>You prefer working with a plan.</h4>
+    <select class="chosen-select" id="q4">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <br>
+    <br>
+    <h2><strong>Question 5</strong></h2>
+    <h4>You enjoy the beach.</h4>
+    <select class="chosen-select" id="q5">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+
 
     <script type="text/javascript">
         // Capture the form inputs
