--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="jumbotron">
+    <header class="jumbotron bg-primary">
         <h1>FriendFinder</h1>
     </header>
 
@@ -19,7 +19,7 @@
         <h2>Take a survey and view your compatibility with other users.</h2>
         <p>Click the button below to get started.</p>
         <br>
-        <a class="btn btn-primary" href="/survey">Take Survey</a>
+        <a class="btn btn-secondary" href="/survey">Take Survey</a>
     </section>
 </body>
 
